<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Used whenever the user refreshes the contents of a view -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.screens.MainActivity"

            tools:listitem="@layout/item_main_recipe" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>



