...
                android:src="@android:drawable/ic_media_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_step_id"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frame_layout_step_media"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#F6F5FF"
                app:layout_constraintBottom_toTopOf="@+id/card_view_step_description_container"
                app:layout_constraintDimensionRatio="H,3:2"
                app:layout_constraintEnd_toEndOf="parent"
...
